Added definition of chats to which the bot is attached

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ APP_URL=http://localhost
 
 TELESCOPE_ENABLED=false
 
+TELEGRAM_BOT_NAME=
 TELEGRAM_BOT_TOKEN=
-TELEGRAM_CHATS=
 
 GITHUB_WEBHOOK_TOKEN=
