--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
     "require": {
         "php": "^8.2",
         "ext-pdo": "*",
+        "defstudio/telegraph": "^1.42",
+        "dragon-code/laravel-actions": "^4.5",
         "dragon-code/laravel-json-response": "^3.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
