--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Deploy
 
 on:
-  push:
-    branches:
-      - release
-
+  release:
+    types:
+      - released
+  
   workflow_dispatch:
 
 jobs:
