--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "spatie/laravel-data": "^4.4"
     },
     "require-dev": {
+        "laravel-lang/common": "^6.2",
         "laravel/telescope": "^5.0",
         "nunomaduro/collision": "^8.0",
         "spatie/laravel-ignition": "^2.4"
@@ -49,7 +50,8 @@
     "scripts": {
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
-            "php artisan vendor:publish --tag=telescope-assets --ansi --force"
+            "php artisan vendor:publish --tag=telescope-assets --ansi --force",
+            "@php artisan lang:update"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
