--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "dragon-code/laravel-actions": "^4.5",
         "dragon-code/laravel-json-response": "^3.0",
         "graham-campbell/github": "^12.6",
+        "laravel-lang/locale-list": "^1.3",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "sentry/sentry-laravel": "^4.3",
