--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
     deploy:
-        runs-on: self-hosted
+        runs-on: ${{ secrets.RUNNER_NAME }}
 
         steps:
             -   name: Checkout code
