--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
     deploy:
-        runs-on: ${{ secrets.RUNNER_NAME }}
+        runs-on: ubuntu-latest
 
         steps:
             -   name: Checkout code
