--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
             -   name: Setup PHP
                 uses: shivammathur/setup-php@v2
                 with:
+                    php-version: 8.4
                     extensions: curl, mbstring, zip, pcntl, pdo, pdo_sqlite, iconv
 
             -   name: Deploy
