--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,16 @@
         "laravel",
         "framework"
     ],
+    "funding": [
+        {
+            "type": "boosty",
+            "url": "https://boosty.to/dragon-code"
+        },
+        {
+            "type": "yoomoney",
+            "url": "https://yoomoney.ru/to/410012608840929"
+        }
+    ],
     "require": {
         "php": "^8.4",
         "ext-pdo": "*",
